--- a/IPE/index.html
+++ b/IPE/index.html
@@ -87,10 +87,12 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
-                                Jadi</button><a class="ads" href="#" target="_blank"></a>
-                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>
-                                Pilih 01
-                            </button></a>
+                                Jadi</button>
+                            <a class="ads" href="#" target="_blank">
+                                <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>
+                                    Pilih 01
+                                </button>
+                            </a>
                         </div>
                     </form>
                 </div>
@@ -125,10 +127,12 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
-                                Jadi</button><a class="ads" href="#" target="_blank"></a>
-                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>
-                                Pilih 02
-                            </button></a>
+                                Jadi</button>
+                            <a class="ads" href="#" target="_blank">
+                                <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>
+                                    Pilih 02
+                                </button>
+                            </a>
                         </div>
                     </form>
                 </div>
@@ -164,10 +168,11 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="ads" href="#" target="_blank"></a>
-                            <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>
-                                Pilih 03
-                            </button></a>
+                            <a class="ads" href="#" target="_blank">
+                                <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>
+                                    Pilih 03
+                                </button>
+                            </a>
                         </div>
                     </form>
                 </div>
