--- a/IPE/index.html
+++ b/IPE/index.html
@@ -88,7 +88,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="ads" href="#" target="_blank">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>
                                     Pilih 01
                                 </button>
@@ -128,7 +128,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="ads" href="#" target="_blank">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>
                                     Pilih 02
                                 </button>
@@ -168,7 +168,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="ads" href="#" target="_blank">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>
                                     Pilih 03
                                 </button>
@@ -380,12 +380,6 @@
 
     sentimen01.addEventListener("change", function () {
         Paslon01.disabled = false
-        let link = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
-        let tombol = document.querySelectorAll(".ads")
-
-        for (let i = 0; i < link.length; i++) {
-            tombol[i].attributes[1].value = link[i].attributes[3].value
-        }
     })
 
     Paslon01.addEventListener("click", () => {
@@ -413,12 +407,6 @@
 
     sentimen02.addEventListener("change", function () {
         Paslon02.disabled = false
-        let link = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
-        let tombol = document.querySelectorAll(".ads")
-
-        for (let i = 0; i < link.length; i++) {
-            tombol[i].attributes[1].value = link[i].attributes[3].value
-        }
     })
 
     Paslon02.addEventListener("click", () => {
@@ -446,12 +434,6 @@
 
     sentimen03.addEventListener("change", function () {
         Paslon03.disabled = false
-        let link = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
-        let tombol = document.querySelectorAll(".ads")
-
-        for (let i = 0; i < link.length; i++) {
-            tombol[i].attributes[1].value = link[i].attributes[3].value
-        }
     })
 
     Paslon03.addEventListener("click", () => {
