--- a/IPE/index.html
+++ b/IPE/index.html
@@ -88,7 +88,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="https://www.profitablegatecpm.com/rb52f96g?key=30d5900c37c30b30a343c8f91abef525">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon01" disabled>
                                     Pilih 01
                                 </button>
@@ -128,7 +128,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="https://www.profitablegatecpm.com/rb52f96g?key=30d5900c37c30b30a343c8f91abef525">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon02" disabled>
                                     Pilih 02
                                 </button>
@@ -168,7 +168,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Gak
                                 Jadi</button>
-                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="//">
+                            <a class="container-447c775022427997699b9223051cb580__link" target="_blank" rel="nofollow" href="https://www.profitablegatecpm.com/rb52f96g?key=30d5900c37c30b30a343c8f91abef525">
                                 <button type="button" class="btn btn-sm btn-primary ms-auto" id="paslon03" disabled>
                                     Pilih 03
                                 </button>
@@ -230,6 +230,10 @@
                 </div>
             </div>
         </section>
+
+        <div class="mt-5 mb-5 border-top"></div>
+        <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" /></a>
+        <div class="mt-5 mb-5 border-top"></div>
     </div>
 </body>
 
