--- a/IPE/index.html
+++ b/IPE/index.html
@@ -230,10 +230,10 @@
                 </div>
             </div>
         </section>
-
-        <div class="mt-5 mb-5 border-top"></div>
-        <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" /></a>
-        <div class="mt-5 mb-5 border-top"></div>
+        
+        <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
+            <img alt="banner" class="w-100" src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" />
+        </a>
     </div>
 </body>
 
