--- a/IPE/index.html
+++ b/IPE/index.html
@@ -232,7 +232,7 @@
         </section>
         
         <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
-            <img alt="banner" class="w-100" src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" />
+            <img alt="banner" class="w-100 mb-5" src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" />
         </a>
     </div>
 </body>
