--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -131,22 +131,24 @@
 </html>
 
 <script>
-    // Ads
-    let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
-    let adsPic = document.querySelectorAll(".container-447c775022427997699b9223051cb580__img")
-    let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
-    for (let i = 0; i < adsText.length; i++) {
-        const caption = adsText[i].innerHTML.toLowerCase()
-        const block = ["judi","slot","gacor","bet", "deposit", "perjudian"]
-        const split = caption.split(/\s+/)
-        block.forEach((larang) => {
-            const index = split.indexOf(larang)
-            if (index !== -1) {
-                document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")[0].attributes[3].value = "#"
-                adsLink[i].attributes[3].value = "https://bit.ly/FloAdventure"
-                adsPic[i].style.backgroundImage = "url(https://pbs.twimg.com/media/Fs0j_P-akAE8Avy?format=jpg&name=small)"
-                adsText[i].innerHTML = "Ayo jelajahi Floniverse bersama Flora dan Adamas!"
-            }
-        } )
+    function iklan() {
+        let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
+        let adsPic = document.querySelectorAll(".container-447c775022427997699b9223051cb580__img")
+        let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
+        for (let i = 0; i < adsText.length; i++) {
+            const caption = adsText[i].innerHTML.toLowerCase()
+            const block = ["judi", "slot", "gacor", "bet", "deposit", "perjudian"]
+            const split = caption.split(/\s+/)
+            block.forEach((larang) => {
+                const index = split.indexOf(larang)
+                if (index !== -1) {
+                    document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")[0].attributes[3].value = "#"
+                    adsLink[i].attributes[3].value = "https://bit.ly/FloAdventure"
+                    adsPic[i].style.backgroundImage = "url(https://pbs.twimg.com/media/Fs0j_P-akAE8Avy?format=jpg&name=small)"
+                    adsText[i].innerHTML = "Ayo jelajahi Floniverse bersama Flora dan Adamas!"
+                }
+            })
+        }
     }
+    setTimeout(iklan, 10000)
 </script>
