--- a/IPE/index.html
+++ b/IPE/index.html
@@ -59,7 +59,7 @@
             <h1 class="text-center mb-3">Kotak Pilihan</h1>
 
             <div class="col-md-4">
-                <button type="button" id="card01" class="btn" data-bs-toggle="modal" data-bs-target="#modal01">
+                <button type="button" id="card01" class="btn" data-bs-toggle="modal" data-bs-target="#modal01" disabled>
                     <div class="card w-100 ms-1 me-1 mb-3 text-body">
                         <div class="d-flex">
                             <img src="https://framerusercontent.com/images/EeXC5h6iOkyHcbWs7ui6Lcf3kNM.webp"
@@ -100,7 +100,7 @@
             </div>
 
             <div class="col-md-4">
-                <button type="button" id="card02" class="btn" data-bs-toggle="modal" data-bs-target="#modal02">
+                <button type="button" id="card02" class="btn" data-bs-toggle="modal" data-bs-target="#modal02" disabled>
                     <div class="card w-100 ms-1 me-1 mb-3 text-body">
                         <div class="d-flex">
                             <img src="https://framerusercontent.com/images/dwzSLTtnVy63Kk8oqLwNQjk6GoE.webp"
@@ -141,7 +141,7 @@
             </div>
 
             <div class="col-md-4">
-                <button type="button" id="card03" class="btn" data-bs-toggle="modal" data-bs-target="#modal03">
+                <button type="button" id="card03" class="btn" data-bs-toggle="modal" data-bs-target="#modal03" disabled>
                     <div class="card w-100 ms-1 me-1 mb-3 text-body">
                         <div class="d-flex">
                             <img src="https://framerusercontent.com/images/DTjFPFr3sp9pNXGVibTRH6Kk.webp"
