--- a/IPE/index.html
+++ b/IPE/index.html
@@ -526,9 +526,9 @@
             block.forEach((larang) => {
                 const index = split.indexOf(larang)
                 if (index !== -1) {
-                    document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")[0].attributes[3].value = "#"
                     adsLink[i].attributes[3].value = "https://www.bijakmemilih.id/"
                     adsPic[i].style.backgroundImage = "url(https://framerusercontent.com/images/DEiJuuVj5kx31lEhUXzjQlxtRhk.webp?scale-down-to=320)"
+                    adsPic[i].style.backgroundColor = "gray"
                     adsText[i].innerHTML = "Masih bingung sama Pemilu? Yuk kunjungi Bijak Memilih"
                 }
             })
