--- a/IPE/index.html
+++ b/IPE/index.html
@@ -504,36 +504,34 @@
                         beginAtZero: true,
                         max: 100,
                         ticks: {
-                            callback: function (value) {
+                            callback: (value) => {
                                 return value + '%'
                             }
                         }
                     }
                 },
                 plugins: {
-                    legend: {
-                        labels: {
-                            generateLabels: function (chart) {
-                                var labels = chart.data.labels
-                                var images = ["https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-01.png", "https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-02.png", "https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-03.png"]
+                    afterDraw: (chart) => {
+                        const ctx = chart.ctx
+                        const xAxis = chart.scales['x']
+                        const yAxis = chart.scales['y']
 
-                                return labels.map(function (label, index) {
-                                    return {
-                                        text: label,
-                                        image: {
-                                            src: images[index],
-                                            width: 20,
-                                            height: 20
-                                        }
-                                    }
-                                })
+                        const images = ["https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-01.png", "https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-02.png", "https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-03.png"]
+
+                        chart.data.labels.forEach( (label, index) => {
+                            const x = xAxis.getPixelForTick(index)
+                            const y = yAxis.bottom + 10
+                            const img = new Image()
+                            img.src = images[index]
+                            img.onload = () => {
+                                ctx.drawImage(img, x - img.width / 2, y)
                             }
-                        }
+                        })
                     }
-                }
 
+                }
             }
-        })
+         })
     }
 
     dataPemilihan()
