--- a/IPE/index.html
+++ b/IPE/index.html
@@ -504,14 +504,15 @@
                         beginAtZero: true,
                         max: 100,
                         ticks: {
-                            callback: (value) => {
+                            callback: function (value) {
                                 return value + '%'
                             }
                         }
                     }
                 }
+
             }
-         })
+        })
     }
 
     dataPemilihan()
