--- a/IPE/index.html
+++ b/IPE/index.html
@@ -196,6 +196,7 @@
             <h1 class="mb-3">Alasan Pemilih</h1>
             <div class="col-md-4">
                 <div class="card p-3 ms-1 me-1 mb-3">
+                    <img src="https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-01.png" width="50" height="50" class="rounded mb-3 ms-auto me-auto">
                     <h5>Anies Baswedan &<br />Muhaimin Iskandar</h5>
                     <ul class="list-group list-group-flush mt-3" id="list01"></ul>
                 </div>
@@ -203,6 +204,7 @@
 
             <div class="col-md-4">
                 <div class="card p-3 ms-1 me-1 mb-3">
+                    <img src="https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-02.png" width="50" height="50" class="rounded mb-3 ms-auto me-auto">
                     <h5>Prabowo Subianto &<br />Gibran Rakabuming</h5>
                     <ul class="list-group list-group-flush mt-3" id="list02"></ul>
                 </div>
@@ -210,6 +212,7 @@
 
             <div class="col-md-4">
                 <div class="card p-3 ms-1 me-1 mb-3">
+                    <img src="https://preview-kly.akamaized.net/liputan6/pemilu-2024/capres-03.png" width="50" height="50" class="rounded mb-3 ms-auto me-auto">
                     <h5>Ganjar Pranowo &<br />Mahfud MD</h5>
                     <ul class="list-group list-group-flush mt-3" id="list03"></ul>
                 </div>
@@ -230,9 +233,9 @@
 
         <div class="mt-5 mb-5 border-top"></div>
 
-        <div id="w-75 ms-auto me-auto container-447c775022427997699b9223051cb580"></div>
+        <div class="w-75 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
 
-        <div class="mt-5 mb-5 border-top"></div>
+        <div class="mt-5 mb-3 border-top"></div>
 
         <div class="w-100 mb-5 text-center">
             <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
