--- a/IPE/index.html
+++ b/IPE/index.html
@@ -237,10 +237,12 @@
 
         <div class="mt-5 mb-3 border-top"></div>
 
+        <div class="w-100 mb-5 text-center">
             <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
                 <img alt="banner" class="ms-auto me-auto"
                     src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" />
             </a>
+        </div>
     </div>
 </body>
 
