--- a/IPE/index.html
+++ b/IPE/index.html
@@ -239,7 +239,7 @@
 
         <div class="w-100 mb-5 text-center">
             <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
-                <img alt="banner" class="ms-auto me-auto"
+                <img alt="banner" class="w-100"
                     src="https://landings-cdn.adsterratech.com/referralBanners/gif/720x90_adsterra_reff.gif" />
             </a>
         </div>
@@ -572,6 +572,6 @@
         position: fixed;
         bottom: 0;
         left: 0;
-        width: -webkit-fill-available;
+        width: --webkit-fill-available;
     }
 </style>
