--- a/IPE/index.html
+++ b/IPE/index.html
@@ -572,6 +572,6 @@
         position: fixed;
         bottom: 0;
         left: 0;
-        width: --webkit-fill-available;
+        width: -webkit-fill-available;
     }
 </style>
