--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -146,9 +146,9 @@
         const suara02 = doc.data().paslon02
         const suara03 = doc.data().paslon03
 
-        document.getElementById("suara01").innerText = suara01
-        document.getElementById("suara02").innerText = suara02
-        document.getElementById("suara03").innerText = suara03
+        document.getElementById("suara01").innerText = `${suara01}%`
+        document.getElementById("suara02").innerText = `${suara02}%`
+        document.getElementById("suara03").innerText = `${suara03}%`
         
         const labels = ["Paslon 01", "Paslon 02", "Paslon 03"]
         const data = [suara01, suara02, suara03]
