--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -99,7 +99,7 @@
 
         <div class="mt-5 mb-5 border-top"></div>
 
-        <div class="w-75 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
+        <div class="w-75 mb-5 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
         
     </div>
 </body>
