--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -144,9 +144,9 @@
         const suara02 = res.data.paslon02
         const suara03 = res.data.paslon03
 
-        document.getElementById("suara01").innerText = `${suara01.toFixed()}%`
-        document.getElementById("suara02").innerText = `${suara02.toFixed()}%`
-        document.getElementById("suara03").innerText = `${suara03.toFixed()}%`
+        document.getElementById("suara01").innerText = `${suara01.toFixed(2)}%`
+        document.getElementById("suara02").innerText = `${suara02.toFixed(2)}%`
+        document.getElementById("suara03").innerText = `${suara03.toFixed(2)}%`
         
         const labels = ["Paslon 01", "Paslon 02", "Paslon 03"]
         const data = [suara01, suara02, suara03]
